# blog-app-backend

./: Cargo.toml  README.md  docker-compose.yml
migrations/: 20240701212914_create_users_table.down.sql  20240701212914_create_users_table.up.sql  20240701212930_create_blogs_table.down.sql  20240701212930_create_blogs_table.up.sql  20240702080257_add_published_col_to_blogs.down.sql  20240702080257_add_published_col_to_blogs.up.sql
src/: db.rs  error.rs  graphql.rs  graphql_protected.rs  graphql_public.rs  handlers.rs  main.rs
src/services/: mod.rs
src/services/auth_service/: auth_service.rs  mod.rs
src/services/blogs_service/: blogs_service.rs  mod.rs
src/services/users_service/: mod.rs  users_service.rs
