[package]
name = "auk-blog"
edition = "2021"



[dependencies]
actix-web = "4.6.0"
actix-web-lab="0.20.2"
juniper = { version = "0.16.1", features = ["chrono", "schema-language"] }
dotenvy = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "^0.4.13", features= ["serde"] }
thiserror = "1.0.0"
tokio = { version = "1.11.0", features = ["full"], optional = true }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
actix-cors = "0.7.0"
env_logger = "0.11.0"
